Having problems with deploying executable. Cleaned all the mvn